<resources>
    <string name="app_name">Family Map</string>

    <!-- Field Names -->
    <string name="serverHost">Server Host:</string>
    <string name="serverPort">Server Port:</string>
    <string name="username">User Name:</string>
    <string name="password">Password:</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>

    <!-- Button Names -->
    <string name="signInButton">SIGN IN</string>
    <string name="registerButton">REGISTER</string>
    <string name="radioMale">Male</string>
    <string name="radioFemale">Female</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mapFragmentMessage">Click on a marker to see event details</string>
    <string name="eventsGroupTitle">Life Events</string>
    <string name="peopleGroupTitle">Family</string>
    <string name="eventItemToastText">You selected %s.</string>
    <string name="personItemToastText">You selected %s.</string>
</resources>
